hphp/hack/test/typecheck/attributes/namespaced_attributes.php.exp
File "namespaced_attributes.php", line 23, characters 7-7:
Invalid argument (Typing[4110])
File "namespaced_attributes.php", line 9, characters 40-45:
This is a string
File "namespaced_attributes.php", line 23, characters 7-7:
It is incompatible with an int
